fixed alignment issue for form card

--- a/src/Styles/addData.css
+++ b/src/Styles/addData.css
@@ -4,6 +4,7 @@
   background: lavender;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .main-div div {
